# vrpoker

./: .gitignore  AGENTS.md  README.md  Taskfile.yml  install-windows.ps1  pyproject.toml  requirements.txt  run-windows.ps1
TexasSolver/: .gitignore  README.md  README.zh-CN.md  Taskfile.yml
TexasSolver/benchmark/: README.md
TexasSolver/docs/: PAMIQ_TEXASSOLVER_INTEGRATION.md
TexasSolver/imgs/: README.md
TexasSolver/include/: README.md
TexasSolver/include/compairer/: README.md
TexasSolver/include/experimental/: README.md
TexasSolver/include/nodes/: README.md
TexasSolver/include/ranges/: README.md
TexasSolver/include/runtime/: README.md
TexasSolver/include/solver/: README.md
TexasSolver/include/tools/: README.md
TexasSolver/include/trainable/: README.md
TexasSolver/include/ui/: README.md
TexasSolver/resources/: README.md
TexasSolver/resources/ffi_api/: README.MD  python_ctypes.py
TexasSolver/resources/python/: TreeBuilder.py  test.py
TexasSolver/src/: README.md
TexasSolver/src/nodes/: README.md
TexasSolver/src/pybind/: README.md
TexasSolver/src/solver/: README.md
docs/: ARCHITECTURE.md  PAMIQ_TEXASSOLVER_INTEGRATION.md  SETUP_AND_RUN.md
src/poker_gto/: config.py  launch.py
src/poker_gto/actuators/: __init__.py  clicker.py
src/poker_gto/agents/: __init__.py  poker_agent.py
src/poker_gto/data/: actions.py  observations.py
src/poker_gto/environments/: __init__.py  actuators.py  sensors.py  vrchat_poker.py
src/poker_gto/models/: __init__.py  texassolver.py
src/poker_gto/vision/: __init__.py  button_detector.py  card_detector.py  ocr.py  table_parser.py
states/2025-11-26_19-48-10,787750.state/: time.pkl
tests/: test_smoke.py  test_vrchat_poker_config.py
tests/vision/: test_ocr.py
