[project]
name = "vrchat-poker-agent"
version = "0.1.0"
description = "VRChat Poker Agent with pamiq-core."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pamiq-core",
    "typing-extensions",
]

[project.optional-dependencies]
vrchat = [
    "pamiq-vrchat",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[project.scripts]
vrpoker = "poker_gto.launch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/poker_gto"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]


