[project]
name = "vrchat-poker-agent"
version = "0.1.0"
description = "VRChat Poker Agent with pamiq-core."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pamiq-core",
    "pamiq-recorder",
    "pamiq-io",
    "pamiq-vrchat",
    "inputtino-python; sys_platform == 'linux'",
    "pydirectinput; sys_platform == 'win32'",
    "opencv-python",
    "easyocr",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[project.scripts]
vrpoker = "poker_gto.launch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/poker_gto"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.uv]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'win32'",
]

[tool.uv.sources]
inputtino-python = { git = "https://github.com/games-on-whales/inputtino.git", subdirectory = "bindings/python", branch = "stable" }
